--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -31,6 +32,7 @@
     },
     "plugins": [
       "@react-native-firebase/app",
+      "expo-router",
       "expo-build-properties"
     ],
     "experiments": {
