--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-file-system": "~18.0.3",
     "expo-image-picker": "~16.0.1",
     "expo-linking": "~7.0.2",
+    "expo-location": "^18.0.2",
     "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.9",
     "expo-status-bar": "~2.0.0",
