--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -33,7 +33,7 @@ jobs:
           java-version: "17"
 
       - name: 🚀 Build app
-        run: eas build --non-interactive --platform android --local
+        run: eas build --non-interactive --platform android --profile development --local
 
       - name: 📤 Upload APK
         uses: actions/upload-artifact@v4
