fix(apk): switched build profile

--- a/eas.json
+++ b/eas.json
@@ -25,7 +25,11 @@
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "image": "latest",
+        "buildType": "apk"
+      }
     },
     "production": {}
   }
