--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "test": "jest",
     "lint": "expo lint",
-    "format": "npx prettier --check --write ."
+    "format": "npx prettier --check ." 
   },
   "doctor": {
     "reactNativeDirectoryCheck": {
@@ -26,28 +26,27 @@
     "@react-native-community/cli": "^15.0.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/firestore": "^17.4.2",
-    "@react-native/babel-preset": "^0.76.3",
     "@react-native/js-polyfills": "^0.76.1",
     "@react-native/metro-babel-transformer": "^0.76.1",
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.2",
     "@testing-library/react-native": "^12.8.1",
-    "expo": "~52.0.11",
+    "expo": "^52.0.9",
     "expo-auth-session": "~6.0.0",
     "expo-build-properties": "~0.13.1",
-    "expo-camera": "~16.0.7",
+    "expo-camera": "~16.0.6",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.3",
     "expo-file-system": "~18.0.3",
-    "expo-image-picker": "~16.0.3",
+    "expo-image-picker": "~16.0.1",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.1",
-    "expo-router": "~4.0.9",
+    "expo-router": "~4.0.7",
     "expo-splash-screen": "~0.29.12",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
+    "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
@@ -55,17 +54,17 @@
     "metro-runtime": "^0.81.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.3.3",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.2",
     "react-native-css-interop": "^0.1.18",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "^1.20.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.0.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
