--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "test": "jest",
     "lint": "expo lint",
-    "format": "npx prettier --check ." 
+    "format": "npx prettier --check ."
   },
   "doctor": {
     "reactNativeDirectoryCheck": {
@@ -31,6 +31,7 @@
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.2",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.8.1",
     "expo": "^52.0.9",
     "expo-auth-session": "~6.0.0",
@@ -56,12 +57,12 @@
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-css-interop": "^0.1.18",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.0",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
@@ -75,8 +76,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.4.4",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
