--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
       "exclude": [
         "react-redux"
       ]
+    },
+    "reactNativeDirectoryCheck": {
+      "listUnknownPackages": false
     }
   },
   "dependencies": {
@@ -52,7 +55,9 @@
     "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
+    "metro-cache-key": "^0.81.0",
     "metro-runtime": "^0.81.0",
+    "metro-transform-plugins": "^0.81.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.3.3",
     "react": "18.3.1",
@@ -70,20 +75,20 @@
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14",
-    "uuid": "^11.0.3",
-    "yarn": "^1.22.22"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-typescript": "^7.26.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "babel-jest": "^29.7.0",
     "firebase-mock": "^2.2.4",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
-    "metro-config": "^0.80.8",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-core": "^0.81.0",
     "react-native-dotenv": "^3.4.11",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
