--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:label="strive"
         android:icon="@mipmap/ic_launcher">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCEhgdrq6tfUEErN326j50qTIeV3uxzmDQ"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
