--- a/package.json
+++ b/package.json
@@ -13,14 +13,9 @@
     "format": "npx prettier --check ."
   },
   "doctor": {
-    "reactNativeDirectoryCheck": {
-      "exclude": [
-        "react-redux"
-      ]
-    },
-    "reactNativeDirectoryCheck": {
-      "listUnknownPackages": false
-    }
+    "exclude": [
+      "react-redux"
+    ]
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
@@ -31,7 +26,6 @@
     "@react-native-firebase/firestore": "^17.4.2",
     "@react-native/js-polyfills": "^0.76.1",
     "@react-native/metro-babel-transformer": "^0.76.1",
-    "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.2",
     "@testing-library/jest-native": "^5.4.3",
@@ -47,7 +41,7 @@
     "expo-image-picker": "~16.0.1",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.1",
-    "expo-router": "~4.0.7",
+    "expo-router": "^4.0.7",
     "expo-splash-screen": "~0.29.12",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
@@ -55,7 +49,11 @@
     "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
+    "metro": "^0.81.0",
     "metro-cache-key": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-core": "^0.81.0",
+    "metro-resolver": "^0.81.0",
     "metro-runtime": "^0.81.0",
     "metro-transform-plugins": "^0.81.0",
     "nativewind": "^4.1.23",
@@ -70,11 +68,10 @@
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
-    "tailwindcss": "^3.4.14",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -86,9 +83,6 @@
     "firebase-mock": "^2.2.4",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
-    "metro": "^0.81.0",
-    "metro-config": "^0.81.0",
-    "metro-core": "^0.81.0",
     "react-native-dotenv": "^3.4.11",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
