--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher">
 
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
+            android:name="com.google.android.geo.AIzaSyCEhgdrq6tfUEErN326j50qTIeV3uxzmDQ"
             android:value="AIzaSyCEhgdrq6tfUEErN326j50qTIeV3uxzmDQ"/>
 
         <activity
