--- a/app.json
+++ b/app.json
@@ -23,13 +23,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.strive",
-      "config":
-      {
-        "googleMaps": {
-          "apiKey": "AIzaSyCEhgdrq6tfUEErN326j50qTIeV3uxzmDQ"
-        }
-      }
+      "package": "com.strive"
     },
     "web": {
       "bundler": "metro",
