--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.2",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@testing-library/react-native": "^12.8.1",
     "expo": "^52.0.9",
     "expo-auth-session": "~6.0.0",
