--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "metro-transform-plugins": "^0.81.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.3.3",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-css-interop": "^0.1.18",
