--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,9 @@
 {
-  "compilerOptions": {"paths": {
-    "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
-  }},
+  "compilerOptions": {
+    "paths": {
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+    }
+  },
   "extends": "expo/tsconfig.base",
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
-
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
