--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
     "react-test-renderer": "^18.3.1",
